--- a/src/styles/Layout.module.scss
+++ b/src/styles/Layout.module.scss
@@ -90,6 +90,9 @@ a {
 .container {
   display: flex;
   flex-direction: column;
+  
+  width: 90%;
+  margin: 0 auto;
 
   main {
     flex-grow: 1;
