Style changes, complete hero, start skills section

--- a/src/styles/vars.module.scss
+++ b/src/styles/vars.module.scss
@@ -2,6 +2,9 @@ $clr-dark: #262626;
 $clr-light: #fff;
 $clr-primary: #03daa9;
 
+$font-normal: "Ubuntu", sans-serif;
+$font-mono: "Ubuntu Mono", monospace;
+
 $fs-root: 62.5%;
 
 // Mobile
