--- a/src/styles/Layout.module.scss
+++ b/src/styles/Layout.module.scss
@@ -5,12 +5,18 @@
 
 html {
   font-size: $fs-root;
+  scroll-behavior: smooth;
 }
 
 body {
   font-family: "Ubuntu", sans-serif;
   background: $clr-dark;
   color: $clr-light;
+  background: linear-gradient(
+    -10deg,
+    $clr-dark 60%,
+    darken($clr-primary, 30) 100%
+  );
 }
 
 h1 {
@@ -90,13 +96,13 @@ a {
 .container {
   display: flex;
   flex-direction: column;
-  
+
   width: 90%;
   margin: 0 auto;
 
-  main {
+  #main {
     flex-grow: 1;
     width: 100%;
-    height: 100vh;
+    height: 100%;
   }
 }
