--- a/src/styles/Navigation.module.scss
+++ b/src/styles/Navigation.module.scss
@@ -89,6 +89,7 @@
     border: 4px solid $clr-primary;
     border-radius: 0.4rem;
     padding: 1.2rem 2.8rem;
+    margin: 0 1.6rem;
 
     color: $clr-light;
     font-size: 2.4rem;
@@ -99,6 +100,7 @@
     &:hover {
       background-color: darken($clr-primary, 10);
       border-color: darken($clr-primary, 10);
+      color: darken($clr-light, 10);
     }
 
     &:active {
@@ -114,6 +116,13 @@
 
       &:hover {
         background-color: transparent;
+        border-color: darken($clr-primary, 10);
+        color: darken($clr-light, 10);
+      }
+
+      &:active {
+        border-color: darken($clr-primary, 20);
+        color: darken($clr-light, 20);
       }
     }
   }
