Use proper icons

--- a/src/styles/Skills.module.scss
+++ b/src/styles/Skills.module.scss
@@ -33,6 +33,10 @@
           font-size: 6.4rem;
           color: $clr-primary;
         }
+
+        img {
+          height: 6.4rem;
+        }
       }
     }
   }
