--- a/src/styles/Navigation.module.scss
+++ b/src/styles/Navigation.module.scss
@@ -5,37 +5,45 @@
   z-index: 1000;
   bottom: 0;
   left: 0;
-  background: $clr-primary;
   width: 100%;
   height: 6.4rem;
+  background: darken($clr-primary, 36);
 
   ul {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    padding-top: 0.6rem;
+    padding-top: 1.2rem;
 
     .nav-item {
       display: inline;
       justify-self: center;
       align-self: center;
-      width: 100%;
+      width: fit-content;
 
       .nav-link {
         display: inline-block;
-        font-size: 1.8rem;
+        font-size: 1.6rem;
         padding: 0 0rem;
         width: 100%;
         text-align: center;
+        padding: 0 1.6rem;
+
+        transition: 0.3s all;
+
+        &:hover {
+          color: darken($clr-primary, 10);
+        }
 
         svg {
           display: block;
-          font-size: 3.2rem;
+          font-size: 2.1rem;
           margin: 0 auto;
         }
       }
 
       .active {
         font-weight: 700;
+        color: $clr-primary;
       }
     }
   }
@@ -56,7 +64,6 @@
       padding: 0;
 
       .nav-item {
-        margin-right: 3.2rem;
         width: auto;
 
         .nav-link {
@@ -128,6 +135,12 @@
   }
 }
 
+@media screen and (min-width: 55em) {
+  #nav ul .nav-item {
+    margin-right: 3.2rem;
+  }
+}
+
 @media screen and (min-width: 70em) {
   #nav {
     ul .nav-item {
@@ -136,7 +149,7 @@
         font-size: 2.4rem;
       }
     }
-  } 
+  }
   .btn {
     font-size: 2.4rem;
     margin: 0 1.6rem;
